@@ -1145,7 +1145,7 @@ public class CharacterEntities
 		for ( int i = 0; i < CharacterEntities.UNICODE_TABLE.length; ++i )
 		{
 			String entity = CharacterEntities.UNICODE_TABLE[ i ][ 0 ];
-			Character unicode = new Character( CharacterEntities.UNICODE_TABLE[ i ][ 1 ].charAt( 0 ) );
+			Character unicode = Character.valueOf( CharacterEntities.UNICODE_TABLE[ i ][ 1 ].charAt( 0 ) );
 
 			CharacterEntities.entities.put( unicode, entity );
 			CharacterEntities.unicodes.put( entity, unicode );
@@ -1171,7 +1171,7 @@ public class CharacterEntities
 				continue;
 			}
 
-			String entity = CharacterEntities.entities.get( new Character( ch ) );
+			String entity = CharacterEntities.entities.get( Character.valueOf( ch ) );
 
 			// If we don't have a translation, use Unicode escape
 			if ( entity == null )
@@ -1249,7 +1249,7 @@ public class CharacterEntities
 			Character unicode;
 			if ( entity.charAt( 1 ) == '#' )
 			{
-				unicode = new Character( (char) StringUtilities.parseInt( entity.substring( 2, entity.length() - 1 ) ) );
+				unicode = Character.valueOf( (char) StringUtilities.parseInt( entity.substring( 2, entity.length() - 1 ) ) );
 			}
 			else
 			{
